force-app/main/default/objects/Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>only product can be added with positive Available_Amount__c</description>
    <inlineHelpText>only product can be added with positive Available_Amount__c</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>