force-app/main/default/objects/Line_Item__c/fields/Product_Name_With_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_With_Code__c</fullName>
    <description>Has Product Name and its code. The code should be in round brackets</description>
    <formula>Product__r.Name  &amp; &quot; (&quot; + Product__r.Code__c  &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has Product Name and its code. The code should be in round brackets</inlineHelpText>
    <label>Product Name With Code</label>
    <type>Text</type>
</CustomField>