force-app/main/default/objects/Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>how many products were bought</description>
    <inlineHelpText>how many products were bought</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>