force-app/main/default/objects/Line_Item__c/validationRules/Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity</fullName>
    <active>true</active>
    <description>Line_Item__c.Quantity__c can not be less than 1</description>
    <errorConditionFormula>Quantity__c &lt;1</errorConditionFormula>
    <errorMessage>Line_Item__c.Quantity__c can not be less than 1</errorMessage>
</ValidationRule>